<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_navigation"
    app:startDestination="@id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="android.developer.project.ui.main.fragment.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_list_to_repository"
            app:destination="@id/navigation_repository" >
            <argument
                android:name="repository_username"
                app:argType="string"/>
            <argument
                android:name="repository_name"
                app:argType="string"/>
        </action>
        <action
            android:id="@+id/action_list_to_profile"
            app:destination="@id/navigation_profile" >
            <argument
                android:name="repository_owner"
                app:argType="string"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_repository"
        android:name="android.developer.project.ui.main.fragment.repository.RepositoryFragment"
        android:label="@string/title_repository"
        tools:layout="@layout/fragment_repository" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="android.developer.project.ui.main.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>