<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="android.developer.project.ui.main.fragment.list.RepositoryItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="@{() -> viewModel.click()}">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@{viewModel.repository.authorImage}"
            android:onClick="@{() -> viewModel.avatarClicked()}"/>

        <TextView
            android:id="@+id/repository_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/author_name"
            app:layout_constraintEnd_toStartOf="@id/watchers_layout"
            app:layout_constraintStart_toEndOf="@id/author_image"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{viewModel.repository.repositoryName}"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/repository_name"
            app:layout_constraintEnd_toStartOf="@id/watchers_layout"
            app:layout_constraintStart_toEndOf="@id/author_image"
            app:layout_constraintTop_toBottomOf="@id/repository_name"
            android:text="@{viewModel.repository.authorName}"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:id="@+id/watchers_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/forks_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/watchers_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.watchers}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/watchers"
                android:textSize="9sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forks_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/issues_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/forks_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.forks}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/forks"
                android:textSize="9sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/issues_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/issue_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@{viewModel.issues}"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/issues"
                android:textSize="9sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>